--- a/app_dogtinder/static/css/registration_style.css
+++ b/app_dogtinder/static/css/registration_style.css
@@ -185,6 +185,7 @@ textarea.question:invalid ~ input[type="submit"] {
   vertical-align: middle;
 }
 #errormsg {
-  color: red;
-  font-size: 10pt;
+  color: red !important;
+  font-size: 9pt;
+  margin-top: 5px;
 }
