--- a/app_dogtinder/templates/login.html
+++ b/app_dogtinder/templates/login.html
@@ -46,7 +46,7 @@
           <label for="password"><span>Password</span></label>
         </div>
         {%for message in messages%}
-        <p class="errormsg">{{ message }}</p>
+        <p id="errormsg">{{ message }}</p>
         {%endfor%}
         <button type="submit" class="btn btn-warning">Log in</button>
       </form>
