--- a/app_dogtinder/templates/registration.html
+++ b/app_dogtinder/templates/registration.html
@@ -99,7 +99,7 @@
           >
         </div>
         {%for message in messages%}
-        <p class="errormsg">{{ message }}</p>
+        <p id="errormsg">{{ message }}</p>
         {%endfor%}
         <button class="btn btn-warning" type="submit">Register</button>
       </form>
