--- a/app_dogtinder/templates/dashboard.html
+++ b/app_dogtinder/templates/dashboard.html
@@ -17,6 +17,7 @@
   <body>
     <div id="container">
       <!--HEADER START-->
+
       <div>
         <header id="header">
           <div>
@@ -34,8 +35,11 @@
                   <li class="nav-item active">
                     <a class="nav-link" href="/dashboard">Home</a>
                   </li>
+                  
                   <li class="nav-item">
-                    <a class="nav-link" href="/dog_profile">Dog Profile</a>
+                    <a class="nav-link" href="/dog_profile/{{ current_user.id }}"
+                      >Dog Profile</a
+                    >
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/match"
@@ -52,7 +56,7 @@
               >
                 <ul class="navbar-nav mr-auto">
                   <li>
-                    <a class="nav-link">Hello, User</a>
+                    <a class="nav-link">Hello, {{ current_user.first_name }}</a>
                   </li>
                   <li>
                     <a class="nav-link">|</a>
@@ -102,23 +106,23 @@
           </h6>
         </div>
         <!-- <h3>RATE DOGS</h3> -->
+        {% for dog in dogs %}
         <div id="rating_panel">
           <div id="pic_panel">
-            <img src="{% static 'img/lilly.jpg'%}" class="dog_pic" />
+            <img src="{{ dog.photo.url }}" class="dog_pic" />
           </div>
           <div id="desc">
             <div>
-              <h3>Lilly, 6</h3>
-              <p>Corona, CA</p>
+              <h3>{{ dog.dog_name }}, {{ dog.age }}</h3>
+              <p><i>{{dog.breed|capfirst}}</i></p>
+              <p>Location: {{ dog.city }}, {{ dog.state }}</p>
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem
-                totam eum ipsum voluptates repellat consequatur delectus unde
-                provident quaerat, dolore minus natus, quasi inventore quo
-                perspiciatis, facilis nisi consectetur officiis!
+                {{ dog.description }}
               </p>
             </div>
-            <form>
-              <div id="value" class="value" href="/save_rating"></div>
+            <form action="/process_rating" method="POST">
+            {%csrf_token%}
+              <div id="value" class="value" href="/process_rating"></div>
               <!-- <label for="formControlRange">Rate this good dog</label> -->
               <input
                 type="range"
@@ -128,25 +132,29 @@
                 value="11"
                 class="form-control-range"
                 id="myRange"
+                name="rating"
               />
-              <button id="save" class="btn btn-warning">Save Rating</button>
-            </form>
           </div>
-          <a href="#" id="next">></a>
+                <!-- <button id="save" class="btn btn-warning" href="/process_rating">
+                  Save Rating
+                </button> -->
+                <button type="submit" id="next">></a>
+              </form>
         </div>
+        {% endfor %}
       </div>
       <!--RATE END-->
 
       <!--AD START-->
-      <img id="ad" src="{% static 'img/match_ad.jpg'%}" />
+      <a href="/match" id="ad"><img src="{% static 'img/match_ad.jpg'%}" /></a>
       <!--AD END-->
 
-      <!--FOOTER-->
+      <!--FOOTER-->`
       <div id="footer">
         <div class="column">
           <h6>Menu</h6>
           <a class="links" href="/dashboard">Home</a>
-          <a class="links" href="/dog_profile">Dog Profile</a>
+          <a class="links" href="/dog_profile/{{current_user.id}}">Dog Profile</a>
           <a class="links" href="/match">Match Pup</a>
         </div>
         <div class="column">
@@ -198,6 +206,7 @@
         </a>
         <p id="copyright">© A Django Project. 2020. All Rights Reserved.</p>
       </div>
+
       <script src="{% static 'js/dashboard_scripts.js' %}"></script>
       <script
         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
