--- a/app_dogtinder/templates/profile.html
+++ b/app_dogtinder/templates/profile.html
@@ -35,7 +35,9 @@
                     <a class="nav-link" href="/dashboard">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/dog_profile">Dog Profile</a>
+                    <a class="nav-link" href="/dog_profile/{{current_user.id}}"
+                      >Dog Profile</a
+                    >
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/match"
@@ -51,6 +53,12 @@
                 id="navbarSupportedContent"
               >
                 <ul class="navbar-nav mr-auto">
+                  <li>
+                    <a class="nav-link">Hello, {{ current_user.first_name }}</a>
+                  </li>
+                  <li>
+                    <a class="nav-link">|</a>
+                  </li>
                   <li class="nav-item dropdown">
                     <a
                       class="nav-link dropdown-toggle"
@@ -90,25 +98,27 @@
       <!--PROFILE START-->
       <div id="main">
         <div id="banner">
-          <h1 id="rate_title">LILLY</h1>
-          <h6 id="subtitle">
-            A GOOD DOG
-          </h6>
+          <!-- if current_user.id == dog.user.id  -->
+          <h1 id="rate_title">P U P P Y P A W F I L E</h1>
         </div>
+        {% for current_dog in current_user.dogs.all %}
         <!-- <h3>RATE DOGS</h3> -->
         <div id="rating_panel">
           <div id="pic_panel">
-            <img src="{% static 'img/lilly.jpg'%}" class="dog_pic" />
+            <img src="{{ current_dog.photo.url }}" class="dog_pic" />
           </div>
           <div id="desc">
             <div>
-              <h3>Lilly, 6</h3>
-              <p>Corona, CA</p>
+              <h3>
+                {{current_dog.dog_name|capfirst }}, {{ current_dog.age }}
+              </h3>
+              <p><i>{{current_dog.breed|capfirst}}</i></p>
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem
-                totam eum ipsum voluptates repellat consequatur delectus unde
-                provident quaerat, dolore minus natus, quasi inventore quo
-                perspiciatis, facilis nisi consectetur officiis!
+                Location: {{ current_dog.city|capfirst }},
+                {{current_dog.state|upper }}
+              </p>
+              <p>
+                {{ current_dog.description|capfirst }}
               </p>
             </div>
             <div id="overall_rating">
@@ -123,8 +133,9 @@
           </div>
         </div>
         <button class="btn btn-outline-warning" id="edit_profile">
-          <a href="/edit" id="edit_text">Edit Profile</a>
+          <a href="/edit/{{current_dog.id}}" id="edit_text">Edit Profile</a>
         </button>
+        {%endfor%}
       </div>
       <!--PROFILE END-->
 
@@ -133,7 +144,9 @@
         <div class="column">
           <h6>Menu</h6>
           <a class="links" href="/dashboard">Home</a>
-          <a class="links" href="/dog_profile">Dog Profile</a>
+          <a class="links" href="/dog_profile/{{current_user.id}}"
+            >Dog Profile</a
+          >
           <a class="links" href="/match">Match Pup</a>
         </div>
         <div class="column">
@@ -161,6 +174,7 @@
           </p>
         </div>
       </div>
+
       <div id="social_media">
         <a class="social_links" href="https://www.facebook.com/WeRateDogs/">
           <img class="social" src="{% static 'img/fb-icon.png' %}" />
