--- a/app_dogtinder/templates/how.html
+++ b/app_dogtinder/templates/how.html
@@ -108,10 +108,13 @@
         <div id="rating_panel">
           <div id="desc">
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem
-              totam eum ipsum voluptates repellat consequatur delectus unde
-              provident quaerat, dolore minus natus, quasi inventore quo
-              perspiciatis, facilis nisi consectetur officiis!
+              How it works is that you drag the thing then save that rating.
+              It's recommended you rate every dog 15/10 because you don't want
+              to hurt a dog's feelings, right? But if you really feel like that
+              dog should only be an 11/10, then that's on you, my friend. But
+              just know that that will be with you for the rest of your days.
+              Now, read on and enjoy some Lorem Ipsums. Or rate the dogs because
+              that's more fun.
             </p>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis
