--- a/app_dogtinder/static/css/dashboard_style.css
+++ b/app_dogtinder/static/css/dashboard_style.css
@@ -104,7 +104,7 @@
 /***banner title end***/
 
 /*RATE*/
-#rating_panel {
+.rating_panel {
   display: flex;
   flex-grow: 1;
   justify-content: center;
@@ -128,7 +128,7 @@
   margin: 30px 0px;
   display: block;
 }
-.value {
+.output {
   /* border-bottom: 4px dashed #bdc3c7; */
   text-align: center;
   font-weight: bold;
@@ -219,7 +219,7 @@ h6 {
   color: rgb(119, 77, 0);
 }
 #about {
-  width: 500px;
+  width: 200px;
 }
 .social {
   display: inline-block;
