--- a/app_dogtinder/templates/profile.html
+++ b/app_dogtinder/templates/profile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,27 +8,20 @@
     {% load static %}
     <link rel="icon" href="{% static 'img/browser-icon.png' %}" />
     <link rel="stylesheet" href="{% static 'css/dogprofile_style.css' %}" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   </head>
+
   <body>
     <div id="container">
       <!--HEADER START-->
       <div>
         <header id="header">
           <div>
-            <nav
-              class="navbar navbar-expand-lg navbar-light"
-              style="background-color: rgb(255, 250, 236)"
-            >
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(255, 250, 236)">
               <a class="navbar-brand" href="#">
                 <a href="/dashboard">
-                  <img id="logo" src="{% static 'img/logo_small.png' %}"
-                /></a>
+                  <img id="logo" src="{% static 'img/logo_small.png' %}" /></a>
               </a>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
@@ -35,23 +29,15 @@
                     <a class="nav-link" href="/dashboard">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/dog_profile/{{current_user.id}}"
-                      >Dog Profile</a
-                    >
+                    <a class="nav-link" href="/dog_profile/{{current_user.id}}">Dog Profile</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/match"
-                      >Match Pup<span class="badge badge-pill badge-warning"
-                        >Soon!</span
-                      ></a
-                    >
+                    <a class="nav-link" href="/match">Match Pup<span
+                        class="badge badge-pill badge-warning">Soon!</span></a>
                   </li>
                 </ul>
               </div>
-              <div
-                class="collapse navbar-collapse help"
-                id="navbarSupportedContent"
-              >
+              <div class="collapse navbar-collapse help" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                   <li>
                     <a class="nav-link">Hello, {{ current_user.first_name }}</a>
@@ -60,27 +46,13 @@
                     <a class="nav-link">|</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a
-                      class="nav-link dropdown-toggle"
-                      href="#"
-                      id="navbarDropdown"
-                      role="button"
-                      data-toggle="dropdown"
-                      aria-haspopup="true"
-                      aria-expanded="false"
-                    >
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Menu
                     </a>
-                    <div
-                      class="dropdown-menu dropdown-menu-right"
-                      aria-labelledby="navbarDropdown"
-                    >
-                      <a class="dropdown-item" href="/add_another_dog"
-                        >Add A Dog</a
-                      >
-                      <a class="dropdown-item" href="/account_settings"
-                        >Account Settings</a
-                      >
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="/add_another_dog">Add A Dog</a>
+                      <a class="dropdown-item" href="/account_settings">Account Settings</a>
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="/how">How It Works</a>
                       <a class="dropdown-item" href="/contact">Contact Us</a>
@@ -125,12 +97,12 @@
               <p>
                 Overall Rating:
               </p>
-              {% for rating in current_dog.ratings.all %}
-              <h2>{{ rating.rating }}/10</h2>
-              {% endfor %}
+              {% for key, value in ratings_dict.items %} {% if current_dog.id == key %}
+              <h2>{{ value }}/10</h2>
               <p id="good_dog">
                 (and always a good dog)
               </p>
+              {% endif %} {% endfor %}
             </div>
           </div>
         </div>
@@ -146,9 +118,7 @@
         <div class="column">
           <h6>Menu</h6>
           <a class="links" href="/dashboard">Home</a>
-          <a class="links" href="/dog_profile/{{current_user.id}}"
-            >Dog Profile</a
-          >
+          <a class="links" href="/dog_profile/{{current_user.id}}">Dog Profile</a>
           <a class="links" href="/match">Match Pup</a>
         </div>
         <div class="column">
@@ -181,42 +151,29 @@
         <a class="social_links" href="https://www.facebook.com/WeRateDogs/">
           <img class="social" src="{% static 'img/fb-icon.png' %}" />
         </a>
-        <a
-          class="social_links"
-          href="https://www.instagram.com/weratedogs/?hl=en"
-        >
+        <a class="social_links" href="https://www.instagram.com/weratedogs/?hl=en">
           <img class="social" src="{% static 'img/ig-icon.png' %}" />
         </a>
-        <a
-          class="social_links"
-          href="https://twitter.com/dog_rates?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
-        >
+        <a class="social_links"
+          href="https://twitter.com/dog_rates?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
           <img class="social" src="{% static 'img/tw-icon.png' %}" />
         </a>
-        <a
-          class="social_links"
-          href="https://github.com/francesbathan/puppy-love"
-        >
+        <a class="social_links" href="https://github.com/francesbathan/puppy-love">
           <img class="social" src="{% static 'img/git-icon.png' %}" />
         </a>
         <p id="copyright">© A Django Project. 2020. All Rights Reserved.</p>
       </div>
       <script src="{% static 'js/dashboard_scripts.js' %}"></script>
-      <script
-        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"
-      ></script>
-      <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"
-      ></script>
-      <script
-        src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"
-      ></script>
+        crossorigin="anonymous"></script>
     </div>
   </body>
+
 </html>
