--- a/app_dogtinder/templates/dashboard.html
+++ b/app_dogtinder/templates/dashboard.html
@@ -106,7 +106,7 @@
               </button>
             </form>
           </div>
-          <button type="submit" id="next"><a href="#{{dog.id|add:1}}">></a></button>
+          <button type="submit" id="next"><a class="nextbtn" href="/next_dog/{{ dog.id }}">></a></button>
         </div>
 
         {% endfor %}
